--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/hmarcos8472/around-express#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.7"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
